SERVER-48211: Fix incorrect usage of ChunkRange